# novel-cli

./: Makefile  README.md  pyproject.toml
novel_cli/: __init__.py  __main__.py  config.py
novel_cli/core/: __init__.py  chapter.py  clean.py  tts.py  volume.py
novel_cli/utils/: __init__.py  file.py  text.py
tests/: test_chapter.py  test_clean.py  test_tts.py  test_volume.py
