[project]
name = "novel-cli"
version = "0.1.0"
description = "A command-line tool for novel management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
novel-cli = "novel_cli.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
